# AGV_Manager

./: .gitignore  LICENSE  README.md
AGV_Manager/: .gitignore  AGV_Manager.pro  listitem.cpp  listitem.hpp  listitem.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc  robot.cpp  robot.hpp  scene.cpp  scene.hpp  taskitem.cpp  taskitem.hpp  taskitem.ui
AGV_Manager/backend/: CMakeLists.txt
AGV_Manager/backend/inc/: AGV.hpp  Dynamic2DMatrix.hpp  Stage.hpp  Task.hpp  Warehouse.hpp
AGV_Manager/backend/src/: AGV.cpp  Stage.cpp  Warehouse.cpp  main.cpp
AGV_Manager/inc/: AGV.hpp  Dynamic2DMatrix.hpp  Stage.hpp  TrafficSystemControl.hpp  TraficSystemControl.hpp  Warehouse.hpp  mainwindow.hpp  robot.hpp  scene.hpp  taskitem.hpp  warehouse.hpp
AGV_Manager/resources/data/: task.data  warehouse.data
AGV_Manager/resources/images/: Warehouse.xcf  Warehouse_layout.xcf
AGV_Manager/resources/text/: warehouse_layout.txt
AGV_Manager/src/: AGV.cpp  Stage.cpp  TrafficSystemControl.cpp  TraficSystemControl.cpp  Warehouse.cpp  main.cpp  mainwindow.cpp  robot.cpp  scene.cpp  taskitem.cpp  warehouse.cpp
AGV_Manager/ui/: mainwindow.ui  taskitem.ui
